--- a/k8s_ecr/config-server-deployment.yaml
+++ b/k8s_ecr/config-server-deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: config-server-app
-        image: configserver
+        image: 582345415283.dkr.ecr.us-east-1.amazonaws.com/configserver
         imagePullPolicy: Always
         ports:
         - containerPort: 9296
