--- a/k8s_ecr/order-service-deployment.yaml
+++ b/k8s_ecr/order-service-deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: order-service-app
-        image: orderservice
+        image: 582345415283.dkr.ecr.us-east-1.amazonaws.com/orderservice
         imagePullPolicy: Always
         ports:
         - containerPort: 8082
