--- a/k8s_ecr/payment-service-deployment.yaml
+++ b/k8s_ecr/payment-service-deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: payment-service-app
-        image: paymentservice
+        image: 582345415283.dkr.ecr.us-east-1.amazonaws.com/paymentservice
         imagePullPolicy: Always
         ports:
         - containerPort: 8081
