--- a/k8s_ecr/product-service-deployment.yaml
+++ b/k8s_ecr/product-service-deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: product-service-app
-        image: productservice
+        image: 582345415283.dkr.ecr.us-east-1.amazonaws.com/productservice
         imagePullPolicy: Always
         ports:
         - containerPort: 8082
