--- a/k8s_ecr/service-registry-statefulset.yaml
+++ b/k8s_ecr/service-registry-statefulset.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: eureka
-        image: serviceregistry
+        image: 582345415283.dkr.ecr.us-east-1.amazonaws.com/serviceregistry
         imagePullPolicy: Always
         ports:
         - containerPort: 8761
